tests/golden/resources/airlock-microgateway/airlock-microgateway/02_resources/01_gateway_classes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: airlock-microgateway
spec:
  controllerName: microgateway.airlock.com/gatewayclass-controller
  parametersRef:
    group: microgateway.airlock.com
    kind: GatewayParameters
    name: params
    namespace: airlock
