tests/golden/resources/airlock-microgateway/airlock-microgateway/02_resources/01_gateway_networkpolicies.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: gateway-1
  namespace: airlock
spec:
  endpointSelector:
    matchLabels:
      gateway.networking.k8s.io/gateway-name: gateway-1
      microgateway.airlock.com/managedBy: syn-airlock-microgateway
  ingress:
    - fromEntities:
        - world
