tests/golden/resources/airlock-microgateway/airlock-microgateway/02_resources/01_gateway_parameters.yaml
apiVersion: microgateway.airlock.com/v1alpha1
kind: GatewayParameter
metadata:
  name: params
  namespace: airlock
spec:
  defaults:
    downstream:
      remoteIP:
        proxyProtocol: {}
  kubernetes:
    deployment:
      automountServiceAccountToken: false
      engineContainer: {}
      placement:
        nodeSelector:
          node-role.kubernetes.io/infra: ''
      replicas: 2
    service:
      annotations:
        k8s.cloudscale.ch/loadbalancer-force-hostname: ingress.mgw.example.com
        k8s.cloudscale.ch/loadbalancer-pool-protocol: proxyv2
      externalTrafficPolicy: Local
      type: LoadBalancer
  logging:
    level: info
