tests/golden/resources/airlock-microgateway/airlock-microgateway/02_resources/01_gateways.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-1
  namespace: airlock
spec:
  gatewayClassName: airlock-microgateway
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: http
      port: 80
      protocol: HTTP
